--- a/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
+++ b/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
@@ -23,24 +23,9 @@ jobs:
           node-version: lts/*
           check-latest: true
           cache: npm
-      - name: Generate cache primary key based on nodejs's and npm's version and package-lock.json's hash
-        id: version
-        shell: bash
-        run: echo "hash=node@$(node -v | grep -oP '(?<=^v)\d+')_npm@$(npm -v | grep -oP '^\d+')_package-lock@$(openssl dgst -sha3-512 package-lock.json | grep -oP '[\da-f]{128}')" >> $GITHUB_OUTPUT && cat $GITHUB_OUTPUT
-      - uses: actions/cache/restore@v3
-        name: Try to restore node_modules from cache
-        id: cache
+      - name: Installing the dependencies
+        uses: AnnAngela/cached_node-modules@v1
         with:
-          path: node_modules
-          key: ${{ steps.version.outputs.hash }}
-      - name: Install dependencies if no cache for node_modules
-        run: npm run ci
-        if: success() && steps.cache.outputs.cache-hit != 'true'
-      - uses: actions/cache/save@v3
-        if: success() && steps.cache.outputs.cache-hit != 'true'
-        name: Save node_modules to cache
-        with:
-          path: node_modules
-          key: ${{ steps.version.outputs.hash }}
+          command: npm run ci
       - name: Detect hardcoded-outdated NPM packages
         run: node scripts/detectHardcodedOutdatedNPMPackages/index.js
