--- a/src/gadgets/wikieditor-highlight/definition.yaml
+++ b/src/gadgets/wikieditor-highlight/definition.yaml
@@ -24,6 +24,7 @@ peers: []
 dependencies:
   - oojs-ui-core
   - ext.gadget.libPolyfill
+  - ext.gadget.libCachedCode
   - ext.gadget.LocalObjectStorage
 
 _sites:
