--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "type": "git",
         "url": "https://github.com/MoegirlPediaInterfaceAdmins/MoegirlPediaInterfaceCodes.git"
     },
-    "license": "",
+    "type": "module",
     "private": true,
     "engines": {
         "node": "^18.17 || ^20.1"
@@ -17,6 +17,7 @@
     "dependencies": {
         "@actions/artifact": "^2.0.1",
         "@actions/core": "^1.10.1",
+        "@annangela/eslint-config": "^4.0.5",
         "@annangela/eslint-formatter-gha": "^1.1.2",
         "@annangela/eslint-plugin-prefer-reflect": "^2.2.2",
         "@csstools/postcss-is-pseudo-class": "^4.0.4",
