ci: use eslint flat config (#400)
Co-authored-by: Bhsd <55071315+bhsd-harry@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
         "./.vscode/json-schemas/gadget-definition.json": "src/gadgets/*/definition.yaml"
     },
     "files.insertFinalNewline": true,
-    "eslint.experimental.useFlatConfig": false,
+    "eslint.experimental.useFlatConfig": true,
     "conventionalCommits.scopes": [
         "Gadget-abusefilter33test",
         "Gadget-abusefilterEdit",
@@ -126,7 +126,6 @@
         "Gadget-widgetPreload",
         "Gadget-wikiBlame",
         "Gadget-wikieditor-highlight",
-        "Gadget-wikieditor-highlight-cm6",
         "Gadget-Wikiplus",
         "Gadget-wikiplus-highlight",
         "Gadget-zeroFill",
