--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -1,22 +1,7 @@
 {
+    "extends": "./tsconfig.json",
     "compilerOptions": {
-        "allowJs": true,
-        "removeComments": true,
         "target": "ES3",
-        "outDir": "dist/",
-        "alwaysStrict": true,
-        "strict": true,
-        "downlevelIteration": true,
-        "lib": [
-            "ESNext",
-            "DOM"
-        ],
-        "ignoreDeprecations": "5.0"
+        "ignoreDeprecations": "5.0",
     },
-    "include": [
-        "src",
-    ],
-    "exclude": [
-        "dist",
-    ],
 }
