ci: Update generatePolyfill.yaml workflow
This commit updates the generatePolyfill.yaml workflow file.

--- a/.github/workflows/generatePolyfill.yaml
+++ b/.github/workflows/generatePolyfill.yaml
@@ -3,11 +3,13 @@ name: Generate Polyfill
 on:
   push:
     paths:
+      - .github/workflows/generatePolyfill.yaml
       - scripts/generatePolyfill/config.yaml
       - scripts/generatePolyfill/index.js
   merge_group:
   pull_request:
     paths:
+        - .github/workflows/generatePolyfill.yaml
         - scripts/generatePolyfill/config.yaml
         - scripts/generatePolyfill/index.js
   workflow_dispatch:
