ci: Update permissions in generatePolyfill.yaml

--- a/.github/workflows/generatePolyfill.yaml
+++ b/.github/workflows/generatePolyfill.yaml
@@ -23,7 +23,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 permissions:
-  actions: read
+  actions: write
   checks: read
   contents: write
   deployments: read
