build(ts): include目录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "include": [
         "src",
         "scripts",
-        "./node_modules/types-mediawiki",
+        "node_modules/@wikimedia/types-wikimedia",
     ],
     "exclude": [
         "dist",
