--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
         "@types/jquery": "^3.5.29",
         "@types/moment": "^2.13.0",
         "@types/oojs-ui": "^0.49.0",
-        "@wikimedia/types-wikimedia": "^0.4.2",
         "autoprefixer": "^10.4.17",
         "browser-pack-flat": "^3.5.0",
         "browserify": "^17.0.0",
@@ -56,6 +55,7 @@
         "simple-git": "^3.22.0",
         "stylelint": "^16.2.1",
         "stylelint-config-standard": "^36.0.0",
+        "types-mediawiki": "^1.5.0",
         "typescript": "^5.3.3",
         "uglify-js": "^3.17.4",
         "unassertify": "^3.0.1",
