--- a/src/gadgets/prism-language-latex/definition.yaml
+++ b/src/gadgets/prism-language-latex/definition.yaml
@@ -29,7 +29,7 @@ _sites:
   - zh
   - commons
 
-_section: browsing
+_section: system
 
 _files:
-  - MediaWiki:Gadget-prism.js
+  - MediaWiki:Gadget-prism-language-latex.js
