--- a/scripts/prefetch/targets.yaml
+++ b/scripts/prefetch/targets.yaml
@@ -16,8 +16,8 @@
 
 - type: npm
   gadget:
-    name: prism-clike
-    fileName: MediaWiki:Gadget-prism-clike.js
+    name: prism-language-clike
+    fileName: MediaWiki:Gadget-prism-language-clike.js
   moduleName: prismjs
   distFilePath: components/prism-clike.js
   version: "1"
@@ -72,128 +72,168 @@
 
 - type: npm
   gadget:
-    name: prism-css
-    fileName: MediaWiki:Gadget-prism-css.js
+    name: prism-language-css
+    fileName: MediaWiki:Gadget-prism-language-css.js
   moduleName: prismjs
   distFilePath: components/prism-css.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-css
-    fileName: MediaWiki:Gadget-prism-css-extras.js
+    name: prism-language-css
+    fileName: MediaWiki:Gadget-prism-language-css-extras.js
   moduleName: prismjs
   distFilePath: components/prism-css-extras.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-javascript
-    fileName: MediaWiki:Gadget-prism-javascript.js
+    name: prism-language-javascript
+    fileName: MediaWiki:Gadget-prism-language-javascript.js
   moduleName: prismjs
   distFilePath: components/prism-javascript.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-javascript
-    fileName: MediaWiki:Gadget-prism-js-extras.js
+    name: prism-language-javascript
+    fileName: MediaWiki:Gadget-prism-language-javascript-extras.js
   moduleName: prismjs
   distFilePath: components/prism-js-extras.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-javascript
-    fileName: MediaWiki:Gadget-prism-javadoclike.js
-  moduleName: prismjs
-  distFilePath: components/prism-javadoclike.js
-  version: "1"
-
-- type: npm
-  gadget:
-    name: prism-javascript
-    fileName: MediaWiki:Gadget-prism-jsdoc.js
-  moduleName: prismjs
-  distFilePath: components/prism-jsdoc.js
-  version: "1"
-
-- type: npm
-  gadget:
-    name: prism-json
-    fileName: MediaWiki:Gadget-prism-json.js
+    name: prism-language-json
+    fileName: MediaWiki:Gadget-prism-language-json.js
   moduleName: prismjs
   distFilePath: components/prism-json.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-json
-    fileName: MediaWiki:Gadget-prism-json5.js
+    name: prism-language-json
+    fileName: MediaWiki:Gadget-prism-language-json5.js
   moduleName: prismjs
   distFilePath: components/prism-json5.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-latex
-    fileName: MediaWiki:Gadget-prism-latex.js
+    name: prism-language-latex
+    fileName: MediaWiki:Gadget-prism-language-latex.js
   moduleName: prismjs
   distFilePath: components/prism-latex.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-lua
-    fileName: MediaWiki:Gadget-prism-lua.js
+    name: prism-language-lua
+    fileName: MediaWiki:Gadget-prism-language-lua.js
   moduleName: prismjs
   distFilePath: components/prism-lua.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-markup
-    fileName: MediaWiki:Gadget-prism-markup.js
+    name: prism-language-markup
+    fileName: MediaWiki:Gadget-prism-language-markup.js
   moduleName: prismjs
   distFilePath: components/prism-markup.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-php
-    fileName: MediaWiki:Gadget-prism-php.js
+    name: prism-language-php
+    fileName: MediaWiki:Gadget-prism-language-php.js
   moduleName: prismjs
   distFilePath: components/prism-php.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-php
-    fileName: MediaWiki:Gadget-prism-php-extras.js
+    name: prism-language-php
+    fileName: MediaWiki:Gadget-prism-language-php-extras.js
   moduleName: prismjs
   distFilePath: components/prism-php-extras.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-regex
-    fileName: MediaWiki:Gadget-prism-regex.js
+    name: prism-language-regex
+    fileName: MediaWiki:Gadget-prism-language-regex.js
   moduleName: prismjs
   distFilePath: components/prism-regex.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-wiki
-    fileName: MediaWiki:Gadget-prism-wiki.js
+    name: prism-language-wiki
+    fileName: MediaWiki:Gadget-prism-language-wiki.js
   moduleName: prismjs
   distFilePath: components/prism-wiki.js
   version: "1"
 
 - type: npm
   gadget:
-    name: prism-yaml
-    fileName: MediaWiki:Gadget-prism-yaml.js
+    name: prism-language-yaml
+    fileName: MediaWiki:Gadget-prism-language-yaml.js
   moduleName: prismjs
   distFilePath: components/prism-yaml.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-javadoclike
+    fileName: MediaWiki:Gadget-prism-plugin-javadoclike.js
+  moduleName: prismjs
+  distFilePath: components/prism-javadoclike.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-jsdoc
+    fileName: MediaWiki:Gadget-prism-plugin-jsdoc.js
+  moduleName: prismjs
+  distFilePath: components/prism-jsdoc.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-match-braces
+    fileName: MediaWiki:Gadget-prism-plugin-match-braces.js
+  moduleName: prismjs
+  distFilePath: plugins/match-braces/prism-match-braces.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-match-braces
+    fileName: MediaWiki:Gadget-prism-plugin-match-braces.css
+  moduleName: prismjs
+  distFilePath: plugins/match-braces/prism-match-braces.css
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-phpdoc
+    fileName: MediaWiki:Gadget-prism-plugin-phpdoc.js
+  moduleName: prismjs
+  distFilePath: components/prism-phpdoc.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-previewers
+    fileName: MediaWiki:Gadget-prism-plugin-previewers.js
+  moduleName: prismjs
+  distFilePath: plugins/previewers/prism-previewers.js
+  version: "1"
+
+- type: npm
+  gadget:
+    name: prism-plugin-previewers
+    fileName: MediaWiki:Gadget-prism-plugin-previewers.css
+  moduleName: prismjs
+  distFilePath: plugins/previewers/prism-previewers.css
   version: "1"
