--- a/src/gadgets/prism-plugin-jsdoc/definition.yaml
+++ b/src/gadgets/prism-plugin-jsdoc/definition.yaml
@@ -24,12 +24,13 @@ peers: []
 
 dependencies:
   - ext.gadget.prism-core
+  - ext.gadget.prism-plugin-javadoclike
 
 _sites:
   - zh
   - commons
 
-_section: browsing
+_section: system
 
 _files:
-  - MediaWiki:Gadget-prism.js
+  - MediaWiki:Gadget-prism-plugin-jsdoc.js
