--- a/src/gadgets/prism-core/definition.yaml
+++ b/src/gadgets/prism-core/definition.yaml
@@ -35,7 +35,7 @@ _files:
   - MediaWiki:Gadget-prism-coy.css
 
   - MediaWiki:Gadget-prism-line-numbers.js
-  - MediaWiki:Gadget-line-numbers.css
+  - MediaWiki:Gadget-prism-line-numbers.css
 
-  - MediaWiki:Gadget-prism-line-color.js
-  - MediaWiki:Gadget-line-color.css
+  - MediaWiki:Gadget-prism-inline-color.js
+  - MediaWiki:Gadget-prism-inline-color.css
