feat(prism-language-wiki): use worker

--- a/src/gadgets/prism-language-wiki/definition.yaml
+++ b/src/gadgets/prism-language-wiki/definition.yaml
@@ -22,9 +22,7 @@ rights:
 
 peers: []
 
-dependencies:
-  - ext.gadget.prism-core
-  - ext.gadget.prism-language-markup
+dependencies: []
 
 _sites:
   - zh
