--- a/src/gadgets/Gadgets-definition-list.yaml
+++ b/src/gadgets/Gadgets-definition-list.yaml
@@ -29,6 +29,7 @@
     - temp-svgFix
     - legacyMainpage
     - zeroFill
+    - prism
 
 - name: skin
   gadgets:
@@ -127,3 +128,21 @@
     - libip
     - libJSON5
     - libCachedCode
+    - prism-core
+    - prism-language-clike
+    - prism-language-css
+    - prism-language-javascript
+    - prism-language-json
+    - prism-language-latex
+    - prism-language-lua
+    - prism-language-markup
+    - prism-language-regex
+    - prism-language-typescript
+    - prism-language-wiki
+    - prism-language-yaml
+    - prism-plugin-javadoclike
+    - prism-plugin-jsdoc
+    - prism-plugin-match-braces
+    - prism-plugin-phpdoc
+    - prism-plugin-previewers
+    - prism-language-php
