--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,31 @@ src/gadgets/libip/MediaWiki:Gadget-libip.js linguist-generated=true
 # From prefetch
 src/gadgets/libJSON5/MediaWiki:Gadget-libJSON5.js linguist-generated=true
 src/gadgets/localforage/MediaWiki:Gadget-localforage.js linguist-generated=true
+src/gadgets/prism-language-clike/MediaWiki:Gadget-prism-language-clike.js linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-core.js linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-coy.css linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-line-numbers.js linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-line-numbers.css linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-inline-color.js linguist-generated=true
+src/gadgets/prism-core/MediaWiki:Gadget-prism-inline-color.css linguist-generated=true
+src/gadgets/prism-language-css/MediaWiki:Gadget-prism-language-css.js linguist-generated=true
+src/gadgets/prism-language-css/MediaWiki:Gadget-prism-language-css-extras.js linguist-generated=true
+src/gadgets/prism-language-javascript/MediaWiki:Gadget-prism-language-javascript.js linguist-generated=true
+src/gadgets/prism-language-javascript/MediaWiki:Gadget-prism-language-javascript-extras.js linguist-generated=true
+src/gadgets/prism-language-json/MediaWiki:Gadget-prism-language-json.js linguist-generated=true
+src/gadgets/prism-language-json/MediaWiki:Gadget-prism-language-json5.js linguist-generated=true
+src/gadgets/prism-language-latex/MediaWiki:Gadget-prism-language-latex.js linguist-generated=true
+src/gadgets/prism-language-lua/MediaWiki:Gadget-prism-language-lua.js linguist-generated=true
+src/gadgets/prism-language-markup/MediaWiki:Gadget-prism-language-markup.js linguist-generated=true
+src/gadgets/prism-language-php/MediaWiki:Gadget-prism-language-php.js linguist-generated=true
+src/gadgets/prism-language-php/MediaWiki:Gadget-prism-language-php-extras.js linguist-generated=true
+src/gadgets/prism-language-regex/MediaWiki:Gadget-prism-language-regex.js linguist-generated=true
+src/gadgets/prism-language-typescript/MediaWiki:Gadget-prism-language-typescript.js linguist-generated=true
+src/gadgets/prism-language-yaml/MediaWiki:Gadget-prism-language-yaml.js linguist-generated=true
+src/gadgets/prism-plugin-javadoclike/MediaWiki:Gadget-prism-plugin-javadoclike.js linguist-generated=true
+src/gadgets/prism-plugin-jsdoc/MediaWiki:Gadget-prism-plugin-jsdoc.js linguist-generated=true
+src/gadgets/prism-plugin-match-braces/MediaWiki:Gadget-prism-plugin-match-braces.js linguist-generated=true
+src/gadgets/prism-plugin-match-braces/MediaWiki:Gadget-prism-plugin-match-braces.css linguist-generated=true
+src/gadgets/prism-plugin-phpdoc/MediaWiki:Gadget-prism-plugin-phpdoc.js linguist-generated=true
+src/gadgets/prism-plugin-previewers/MediaWiki:Gadget-prism-plugin-previewers.js linguist-generated=true
+src/gadgets/prism-plugin-previewers/MediaWiki:Gadget-prism-plugin-previewers.css linguist-generated=true
