--- a/src/gadgets/prism-language-wiki/definition.yaml
+++ b/src/gadgets/prism-language-wiki/definition.yaml
@@ -33,3 +33,4 @@ _section: system
 _files:
   - MediaWiki:Gadget-prism-language-wiki.css
   - MediaWiki:Gadget-prism-language-wiki.js
+  - MediaWiki:Gadget-prism-language-wiki.json
