fix(gadget-prism): 修复因萌百的特殊部署方式造成的错误 (#459)

--- a/src/gadgets/prism-plugin-jsdoc/definition.yaml
+++ b/src/gadgets/prism-plugin-jsdoc/definition.yaml
@@ -25,6 +25,8 @@ peers: []
 dependencies:
   - ext.gadget.prism-core
   - ext.gadget.prism-plugin-javadoclike
+  - ext.gadget.prism-language-javascript
+  - ext.gadget.prism-language-typescript
 
 _sites:
   - zh
