chore(prsim): 重新整理子文件

--- a/src/gadgets/prism-language-javascript/definition.yaml
+++ b/src/gadgets/prism-language-javascript/definition.yaml
@@ -24,7 +24,6 @@ peers: []
 
 dependencies:
   - ext.gadget.prism-core
-  - ext.gadget.prism-language-clike
 
 _sites:
   - zh
@@ -33,5 +32,6 @@ _sites:
 _section: system
 
 _files:
+  - MediaWiki:Gadget-prism-language-clike.js
   - MediaWiki:Gadget-prism-language-javascript.js
   - MediaWiki:Gadget-prism-language-javascript-extras.js
