--- a/src/gadgets/prism-language-php/.eslintrc.yaml
+++ b/src/gadgets/prism-language-php/.eslintrc.yaml
@@ -1,3 +1,4 @@
 ignorePatterns:
+  - MediaWiki:Gadget-prism-language-markup-templating.js
   - MediaWiki:Gadget-prism-language-php.js
   - MediaWiki:Gadget-prism-language-php-extras.js
