--- a/src/gadgets/prism-language-javascript/.eslintrc.yaml
+++ b/src/gadgets/prism-language-javascript/.eslintrc.yaml
@@ -1,3 +1,4 @@
 ignorePatterns:
+  - MediaWiki:Gadget-prism-language-clike.js
   - MediaWiki:Gadget-prism-language-javascript.js
   - MediaWiki:Gadget-prism-language-javascript-extras.js
