--- a/src/gadgets/prism-language-wiki/definition.yaml
+++ b/src/gadgets/prism-language-wiki/definition.yaml
@@ -31,5 +31,6 @@ _sites:
 _section: system
 
 _files:
+  - MediaWiki:Gadget-wikiparser-node.js
   - MediaWiki:Gadget-prism-language-wiki.js
   - MediaWiki:Gadget-prism-language-wiki.json
