--- a/src/gadgets/prism-core/definition.yaml
+++ b/src/gadgets/prism-core/definition.yaml
@@ -31,6 +31,7 @@ _sites:
 _section: system
 
 _files:
+  - MediaWiki:Gadget-prism-loader.js
   - MediaWiki:Gadget-prism-core.js
   - MediaWiki:Gadget-prism-coy.css
 
