fix: Fix prism (#462)

--- a/src/gadgets/prism-core/definition.yaml
+++ b/src/gadgets/prism-core/definition.yaml
@@ -31,11 +31,9 @@ _sites:
 _section: system
 
 _files:
+  - MediaWiki:Gadget-prism-loader.js
   - MediaWiki:Gadget-prism-core.js
   - MediaWiki:Gadget-prism-coy.css
 
   - MediaWiki:Gadget-prism-line-numbers.js
   - MediaWiki:Gadget-prism-line-numbers.css
-
-  - MediaWiki:Gadget-prism-inline-color.js
-  - MediaWiki:Gadget-prism-inline-color.css
