--- a/src/gadgets/prism-language-javascript/definition.yaml
+++ b/src/gadgets/prism-language-javascript/definition.yaml
@@ -24,9 +24,6 @@ peers: []
 
 dependencies:
   - ext.gadget.prism-core
-  - ext.gadget.prism-language-clike
-  - ext.gadget.prism-language-regex
-  - ext.gadget.prism-language-markup
 
 _sites:
   - zh
@@ -35,5 +32,6 @@ _sites:
 _section: system
 
 _files:
+  - MediaWiki:Gadget-prism-language-clike.js
   - MediaWiki:Gadget-prism-language-javascript.js
   - MediaWiki:Gadget-prism-language-javascript-extras.js
